# balancedock

./: LICENSE  README.md
backend/: .gitignore  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  security.py  statement_processing_service.py
backend/docs/: ACCOUNTS_ROUTES.md  AUTH_FLOW.md  SECRETS_ROUTES.md  STATEMENTS_ROUTES.md  USERS_ROUTES.md
backend/routes/: accounts.py  auth.py  secrets.py  statements.py  users.py
backend/uploads/statements/: 5ef362e4-ec85-4221-aedc-d1a763e36ebc.json
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/accounts/: page.tsx
frontend/app/(app)/accounts/[id]/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/settings/: page.tsx
frontend/app/(app)/statements/[id]/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/components/: bank-accounts-section.tsx  profile-section.tsx  secrets-section.tsx  sidebar.tsx  upload-statement-dialog.tsx
frontend/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  table.tsx
frontend/lib/: types.ts
frontend/lib/actions/: accounts.ts  auth.ts  secrets.ts  statements.ts  user.ts
